--- a/assets/app.css
+++ b/assets/app.css
@@ -2,26 +2,16 @@
 @tailwind components;
 @tailwind utilities;
 
-::-webkit-scrollbar {
-    width: 7px;
+  ::-webkit-scrollbar {
+    width: 8px;
+    height: 10px;
   }
-  
-  /* Track */
   ::-webkit-scrollbar-track {
-    width: 7px;
-    background: #0f212e;
-    border-radius: 10px;
+      border-radius: 10px;
+      background: #444;
+      box-shadow: 0 0 1px 1px #111, inset 0 0 4px rgba(0, 0, 0, 0.3);
   }
-  
-  /* Handle */
   ::-webkit-scrollbar-thumb {
-    background: #364853;
-    transform: translate(10px 0);
-    border-radius: 10px;
-    transition: background 0.2s;
-  }
-  
-  /* Handle on hover */
-  ::-webkit-scrollbar-thumb:hover{
-    background: #4f6979;
+      border-radius: 10px;
+      box-shadow: inset 0 0 1px 1px #646464;
   }
